# c_fsio

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: example.c
include/: fsio.h
src/: fsio.c
tests/: test.c  test.h  test_append_binary_file_content.c  test_append_text_file_content.c  test_basename_dir.c  test_basename_empty.c  test_basename_file.c  test_basename_file.cp  test_basename_file_no_parent.c  test_basename_file_no_parent.cp  test_basename_null.c  test_basename_root_dir.c  test_basename_root_dir.cp  test_chmod_recursive_dir.c  test_chmod_recursive_exists.c  test_chmod_recursive_not_exists.c  test_chmod_recursive_null.c  test_copy_file_exists.c  test_copy_file_not_exists.c  test_copy_file_null_source.c  test_copy_file_null_target.c  test_create_empty_file.c  test_create_empty_file_parent_dir_not_exists.c  test_dir_exists_dir.c  test_dir_exists_file.c  test_dir_exists_not_found.c  test_dir_exists_null.c  test_dirname_dir.c  test_dirname_dir_relative_path.c  test_dirname_empty.c  test_dirname_file.c  test_dirname_file.cp  test_dirname_file_no_parent.c  test_dirname_file_no_parent.cp  test_dirname_file_relative_path.c  test_dirname_null.c  test_dirname_root_dir.c  test_dirname_root_dir.cp  test_file_exists_dir.c  test_file_exists_file.c  (+80 more)
